[package]
name = "switch2-procon"
version.workspace = true
edition = "2024"
authors = ["tamaron"]
license = "MIT"

[dependencies]
btleplug = "0.12"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
bitflags = "2"
uuid = "1"

[target.'cfg(windows)'.dependencies]
vigem-client = { version = "0.1", features = ["unstable_xtarget_notification"] }
windows = { version = "0.62", features = ["Devices_Bluetooth"] }
